--- a/app/src/main/res/layout/campage.xml
+++ b/app/src/main/res/layout/campage.xml
@@ -4,4 +4,13 @@
     android:layout_height="902dp"
     android:background="#C0EBFD"
     android:clipToOutline="true">
+    <View
+        android:id="@+id/removebg_pr1"
+        android:layout_width="155dp"
+        android:layout_height="121dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/cam" />
 </RelativeLayout>
