--- a/app/src/main/res/layout/recpage.xml
+++ b/app/src/main/res/layout/recpage.xml
@@ -4,4 +4,13 @@
     android:layout_height="902dp"
     android:background="#C0EBFD"
     android:clipToOutline="true">
+    <View
+        android:id="@+id/removebg_pr5"
+        android:layout_width="123dp"
+        android:layout_height="114dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rec" />
 </RelativeLayout>
