--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:clipToOutline="true">
 
  <!-- 카메라 -->
- <View
+ <ImageView
      android:id="@+id/removebg_pr1"
      android:layout_width="155dp"
      android:layout_height="121dp"
@@ -14,9 +14,12 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="12dp"
      android:layout_marginTop="10dp"
-     android:background="@drawable/cam" />
- <!--예방접종-->
- <View
+     android:background="@drawable/cam"
+     android:clickable="true"
+     android:onClick="campage" />
+
+ <!-- 예방접종 -->
+ <ImageView
      android:id="@+id/removebg_pr2"
      android:layout_width="163dp"
      android:layout_height="141dp"
@@ -24,9 +27,12 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="270dp"
      android:layout_marginTop="610dp"
-     android:background="@drawable/ho" />
- <!--놀아주기-->
- <View
+     android:background="@drawable/ho"
+     android:clickable="true"
+     android:onClick="hopage" />
+
+ <!-- 놀아주기 -->
+ <ImageView
      android:id="@+id/removebg_pr3"
      android:layout_width="151dp"
      android:layout_height="117dp"
@@ -34,9 +40,12 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="140dp"
      android:layout_marginTop="630dp"
-     android:background="@drawable/play" />
- <!--밥&물-->
- <View
+     android:background="@drawable/play"
+     android:clickable="true"
+     android:onClick="palaypage" />
+
+ <!-- 밥&물 -->
+ <ImageView
      android:id="@+id/removebg_pr4"
      android:layout_width="147dp"
      android:layout_height="110dp"
@@ -44,10 +53,12 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="13dp"
      android:layout_marginTop="630dp"
-     android:background="@drawable/ri" />
- <!--녹음-->
+     android:background="@drawable/ri"
+     android:clickable="true"
+     android:onClick="ripage" />
 
- <View
+ <!-- 녹음 -->
+ <ImageView
      android:id="@+id/removebg_pr5"
      android:layout_width="123dp"
      android:layout_height="114dp"
@@ -55,9 +66,12 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="264dp"
      android:layout_marginTop="14dp"
-     android:background="@drawable/rec" />
- <!--프로필-->
- <View
+     android:background="@drawable/rec"
+     android:clickable="true"
+     android:onClick="recpage" />
+
+ <!-- 프로필 -->
+ <ImageView
      android:id="@+id/removebg_pr6"
      android:layout_width="319dp"
      android:layout_height="425dp"
@@ -65,6 +79,8 @@
      android:layout_alignParentTop="true"
      android:layout_marginLeft="44dp"
      android:layout_marginTop="120dp"
-     android:background="@drawable/pro" />
+     android:background="@drawable/pro"
+     android:clickable="true"
+     android:onClick="propage" />
 
 </RelativeLayout>
