--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
  <!-- 카메라 -->
  <ImageView
-     android:id="@+id/R.id.cam"
+     android:id="@+id/cam"
      android:layout_width="155dp"
      android:layout_height="121dp"
      android:layout_alignParentLeft="true"
@@ -20,7 +20,7 @@
 
  <!-- 예방접종 -->
  <ImageView
-     android:id="@+id/R.id.ho"
+     android:id="@+id/ho"
      android:layout_width="163dp"
      android:layout_height="141dp"
      android:layout_alignParentLeft="true"
@@ -33,7 +33,7 @@
 
  <!-- 놀아주기 -->
  <ImageView
-     android:id="@+id/R.id.play"
+     android:id="@+id/play"
      android:layout_width="151dp"
      android:layout_height="117dp"
      android:layout_alignParentLeft="true"
@@ -46,7 +46,7 @@
 
  <!-- 밥&물 -->
  <ImageView
-     android:id="@+id/R.id.ri"
+     android:id="@+id/ri"
      android:layout_width="147dp"
      android:layout_height="110dp"
      android:layout_alignParentLeft="true"
@@ -59,7 +59,7 @@
 
  <!-- 녹음 -->
  <ImageView
-     android:id="@+id/R.id.rec"
+     android:id="@+id/rec"
      android:layout_width="123dp"
      android:layout_height="114dp"
      android:layout_alignParentLeft="true"
@@ -72,7 +72,7 @@
 
  <!-- 프로필 -->
  <ImageView
-     android:id="@+id/R.id.pro"
+     android:id="@+id/pro"
      android:layout_width="319dp"
      android:layout_height="425dp"
      android:layout_alignParentLeft="true"
