--- a/app/src/main/res/layout/ripage.xml
+++ b/app/src/main/res/layout/ripage.xml
@@ -28,6 +28,9 @@
         android:height="69dp"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="630dp"
-        />
+        android:src="@drawable/check"
+        android:clickable="true"
+        android:onClick="goBack" />
+    />
 
 </RelativeLayout>
