--- a/app/src/main/res/layout/campage.xml
+++ b/app/src/main/res/layout/campage.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="454dp"
-    android:layout_height="902dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#C0EBFD"
     android:clipToOutline="true">
+
+    <TextureView
+        android:id="@+id/cameraPreview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/check_1" />
+
     <View
         android:id="@+id/removebg_pr1"
         android:layout_width="155dp"
@@ -13,6 +20,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/cam" />
+
 
     <!--되돌아가기-->
     <View
