--- a/app/src/main/res/layout/ball.xml
+++ b/app/src/main/res/layout/ball.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
     android:background="#C0EBFD"
-    android:clipToOutline="true">
+    android:clipToOutline="true"
+    tools:context=".MainActivity">
+
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="16dp"/>
+
+    <EditText
+        android:id="@+id/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Column 2 Value"
+        android:inputType="number"
+        android:layout_below="@id/spinner"
+        android:layout_marginTop="8dp"/>
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="데이터 수정"
+        android:layout_below="@id/edittext"
+        android:layout_marginTop="8dp"/>
 
     <TextView
-        android:id="@+id/time_text"
-        android:layout_width="wrap_content"
+        android:id="@+id/resultTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="알람 시간을 선택하세요."
-        android:layout_centerInParent="true"/>
-
-    <Button
-        android:id="@+id/time_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="알람 설정"
-        android:layout_below="@+id/time_text"
-        android:layout_centerHorizontal="true"
+        android:layout_below="@id/updateButton"
         android:layout_marginTop="16dp"/>
 
-    <Button
-        android:id="@+id/alarm_cancel_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="알람 취소"
-        android:layout_below="@+id/time_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+    <View
+        android:id="@+id/check_1"
+        android:layout_width="90dp"
+        android:layout_height="51dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="630dp"
+        android:background="@drawable/check"
+        android:clickable="true"
+        android:onClick="goBack" />
 </RelativeLayout>
