--- a/app/src/main/res/layout/recpage.xml
+++ b/app/src/main/res/layout/recpage.xml
@@ -1,35 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="454dp"
-    android:layout_height="902dp"
-    android:background="#C0EBFD"
-    android:clipToOutline="true">
-    <View
-        android:id="@+id/removebg_pr5"
-        android:layout_width="123dp"
-        android:layout_height="114dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rec" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <!--되돌아가기-->
-    <View
-        android:id="@+id/check_1"
-        android:layout_width="119dp"
-        android:layout_height="69dp"
-        android:background="@drawable/check"
+    <Button
+        android:id="@+id/btnRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Record"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="119dp"
-        android:height="69dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="630dp"
-        android:src="@drawable/check"
-        android:clickable="true"
-        android:onClick="goBack" />
-    />
+    <Button
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play"
+        android:layout_below="@id/btnRecord"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"/>
+    <Button
+        android:id="@+id/btnSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:layout_below="@id/btnPlay"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
 
 </RelativeLayout>
