--- a/app/src/main/res/layout/ripage.xml
+++ b/app/src/main/res/layout/ripage.xml
@@ -5,6 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <Spinner
+        android:id="@+id/spainner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <EditText
+        android:id="@+id/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Column 2 Value"
+        android:inputType="number"
+        />
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="데이터 수정"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,12 +34,17 @@
             android:layout_height="wrap_content"
             android:id = "@+id/babButton"
             android:layout_weight="1"
-            android:text="ledOn"/>
+            android:text="밥 주기"/>
         <Button
             android:id = "@+id/mulButton"
             android:layout_weight="1"
-            android:text="ledOff"
+            android:text="물 주기"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
 </LinearLayout>
