--- a/app/src/main/res/layout/campage.xml
+++ b/app/src/main/res/layout/campage.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,25 +10,15 @@
     <TextureView
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/btnCapture" />
+        android:layout_height="match_parent"/>
 
-    <Button
-        android:id="@+id/btnCapture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="사진 찍기"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:onClick="takePicture" />
+
 
     <Button
         android:id="@+id/btnOpenGallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="갤러리 열기"
-
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:onClick="openGallery" />
@@ -43,18 +35,38 @@
         android:clickable="true"
         android:onClick="openCampage2" />
 
-    <View
-        android:id="@+id/check_1"
-        android:layout_width="119dp"
-        android:layout_height="69dp"
-        android:background="@drawable/check"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="630dp"
-        android:clickable="true"
-        android:onClick="goBack" />
+
+    <Button
+        android:id="@+id/btnTakePicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/check_1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="610dp"
+        android:onClick="takePicture"
+        android:text="Take Picture" />
+
+    <Button
+        android:id="@+id/btnGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gallery"
+        android:layout_below="@id/btnTakePicture"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:onClick="openGallery" />
+
+
     <WebView
-        android:id="@+id/myWebView"
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:layout_marginBottom="320dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    </LinearLayout>
 </RelativeLayout>
+
+
