--- a/app/src/main/res/layout/campage.xml
+++ b/app/src/main/res/layout/campage.xml
@@ -1,72 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C0EBFD"
-    android:clipToOutline="true">
-
-    <TextureView
-        android:id="@+id/cameraPreview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
-
-    <Button
-        android:id="@+id/btnOpenGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="갤러리 열기"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:onClick="openGallery" />
-
-    <View
-        android:id="@+id/removebg_pr1"
-        android:layout_width="155dp"
-        android:layout_height="121dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/cam"
-        android:clickable="true"
-        android:onClick="openCampage2" />
-
-
-    <Button
-        android:id="@+id/btnTakePicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/check_1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="610dp"
-        android:onClick="takePicture"
-        android:text="Take Picture" />
-
-    <Button
-        android:id="@+id/btnGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gallery"
-        android:layout_below="@id/btnTakePicture"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:onClick="openGallery" />
-
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_marginBottom="320dp" />
-
+        android:layout_height="400dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            android:textColor="#ff0000"
+            android:text="&lt;-"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btnRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            android:textColor="#ff0000"
+            android:text="-&gt;" />
     </LinearLayout>
-</RelativeLayout>
-
-
+</LinearLayout>
